<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ETHIO RADIOZ</string>
    <string name="favorites">ETHIO RADIOZ</string>
    <string name="listeners">listeners</string>
    <string name="now_playing_prefix">Now Playing:</string>
    <string name="add_station">Add Station</string>
    <string name="station_name">Station Name</string>
    <string name="frequency">Frequency</string>
    <string name="city">City</string>
    <string name="stream_url">Stream URL</string>
    <string name="image_url">Image URL</string>
    <string name="upload_station">Upload Station</string>
    <string name="loading">Loading...</string>
    <string name="no_stations">No stations available</string>
    <string name="error_loading_stations">Error loading stations</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="now_playing">Now Playing</string>
    <string name="select_image">Select Image</string>
    <string name="from_gallery">From Gallery</string>
    <string name="from_camera">From Camera</string>
    <string name="cancel">Cancel</string>
    <string name="no_internet">No internet connection</string>
    <string name="stream_error">Failed to play station</string>
    <string name="notification_channel_name">Radio Playback</string>
    <string name="notification_channel_description">Playing radio stations</string>
</resources>

